--- a/package.json
+++ b/package.json
@@ -1,74 +1,71 @@
 {
-  "name": "sh-trade",
+  "name": "sh-trade2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.10.8",
     "autoprefixer": "7.1.6",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.1.2",
-    "babel-preset-react-app": "^3.1.2",
+    "babel-jest": "^22.1.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.7.0",
+    "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
+    "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "jest": "22.4.2",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "postcss-scss": "^1.0.3",
+    "precss": "^3.1.0",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.6.3",
-    "react-dev-utils": "^5.0.2",
+    "react-app-rewired": "^1.4.1",
+    "react-dev-utils": "^5.0.1",
     "react-dom": "^16.6.3",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "ts-import-plugin": "^1.4.3",
     "ts-jest": "22.0.1",
     "ts-loader": "^2.3.7",
     "tsconfig-paths-webpack-plugin": "^2.0.0",
     "tslint": "^5.7.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-react": "^3.2.0",
-    "uglifyjs-webpack-plugin": "1.2.5",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.11.3",
+    "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "react-app-rewired start --scripts-version react-scripts-ts node scripts/start.js",
-    "build": "react-app-rewired build node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.11.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^1.6.2",
-    "react-scripts-ts": "^3.1.0",
-    "ts-import-plugin": "^1.5.5",
-    "typescript": "^3.1.6",
-    "webpack-bundle-analyzer": "^3.0.3"
+    "typescript": "^3.1.6"
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!**/*.d.ts"
+      "src/**/*.{js,jsx,ts,tsx}"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
@@ -106,7 +103,7 @@
     ],
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "/Users/luluwu/project/sh-trade/tsconfig.test.json"
+        "tsConfigFile": "/Users/WXL/project/sh-trade2/tsconfig.test.json"
       }
     }
   },
