--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "2.29.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "22.4.2",
+    "jssha": "1.6.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "object-assign": "4.1.1",
@@ -39,11 +40,16 @@
     "raf": "3.4.0",
     "react": "^16.6.3",
     "react-app-rewired": "^1.4.1",
+    "react-cookie": "1.0.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.6.3",
     "react-intl": "^2.7.2",
     "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "reactjs-localstorage": "^0.0.7",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "resolve": "1.6.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
