--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-actions": "^2.3.1",
     "@types/redux-saga": "^0.10.5",
+    "@types/rx": "^4.1.1",
     "antd": "^3.10.8",
     "autoprefixer": "7.1.6",
     "babel-jest": "^22.1.0",
@@ -20,6 +21,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.6",
+    "connected-react-router": "^5.0.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
