--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "autoprefixer": "7.1.6",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.7.0",
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "charting_library": "mobiwallet/charting_library.git#black-theme",
     "classnames": "^2.2.6",
     "connected-react-router": "^5.0.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -34,7 +35,6 @@
     "jest": "22.4.2",
     "jssha": "1.6.0",
     "less": "^2.7.3",
-    "less-loader": "^4.0.5",
     "lodash.isempty": "^4.4.0",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
@@ -85,6 +85,10 @@
     "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "antd-theme-webpack-plugin": "^1.1.9",
+    "babel-plugin-import": "^1.11.0",
+    "less-loader": "^4.1.0",
+    "react-app-rewire-less": "^2.1.3",
     "typescript": "^3.1.6"
   },
   "jest": {
@@ -134,6 +138,15 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "style": true
+        }
+      ]
     ]
   }
 }
