--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/js-cookie": "^2.2.0",
     "@types/lodash.filter": "^4.6.4",
+    "@types/lodash.findindex": "^4.6.4",
+    "@types/lodash.get": "^4.4.4",
     "@types/lodash.isempty": "^4.4.4",
+    "@types/lodash.isundefined": "^3.0.4",
+    "@types/lodash.last": "^3.0.4",
+    "@types/lodash.orderby": "^4.6.4",
+    "@types/lodash.sum": "^4.0.4",
+    "@types/lodash.sumby": "^4.6.4",
     "@types/react-intl": "^2.3.13",
     "@types/react-redux": "^6.0.10",
     "@types/react-router": "3.0.5",
@@ -25,7 +32,7 @@
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "charting_library": "zgcom/sh-charting_library.git#black-theme",
+    "charting_library": "zgcom/sh-charting_library#zg_chart",
     "classnames": "^2.2.6",
     "connected-react-router": "^5.0.1",
     "copy-webpack-plugin": "^4.6.0",
@@ -44,7 +51,18 @@
     "jssha": "1.6.0",
     "less": "^2.7.3",
     "lodash.filter": "^4.6.0",
+    "lodash.findindex": "^4.6.0",
+    "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
+    "lodash.isnan": "^3.0.2",
+    "lodash.isnull": "^3.0.0",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.last": "^3.0.0",
+    "lodash.matches": "^4.6.0",
+    "lodash.orderby": "^4.6.0",
+    "lodash.remove": "^4.7.0",
+    "lodash.sum": "^4.0.2",
+    "lodash.sumby": "^4.6.0",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -90,6 +108,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "staging-build": "DEPLOY_ENV=staging node scripts/build.js",
+    "prod-build": "DEPLOY_ENV=production node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
