--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "reactjs-localstorage": "^0.0.7",
     "redux-actions": "^2.6.4",
     "resolve": "1.6.0",
+    "sh-charting_library": "zgcom/sh-charting_library#zg_chart",
     "source-map-loader": "^0.2.1",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
