--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "charting_library": "zgcom/sh-charting_library#zg_chart",
     "classnames": "^2.2.6",
     "connected-react-router": "^5.0.1",
     "copy-webpack-plugin": "^4.6.0",
