--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "babel-preset-react-app": "^3.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
-    "charting_library": "zgcom/sh-charting_library#zg_chart",
+    "charting_library": "git+ssh://git@github.com:zgcom/sh-charting_library.git#zg_chart",
     "classnames": "^2.2.6",
+    "compression-webpack-plugin": "1.1.12",
     "connected-react-router": "^5.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "0.28.7",
@@ -102,9 +103,6 @@
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
-  "resolutions": {
-    "fsevents": "1.1.2"
-  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
@@ -119,9 +117,11 @@
     "@types/react-dom": "^16.0.10",
     "antd-theme-webpack-plugin": "^1.1.9",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "less-loader": "^4.1.0",
     "react-app-rewire-less": "^2.1.3",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -173,6 +173,7 @@
     ],
     "plugins": [
       [
+        "transform-decorators-legacy",
         "import",
         {
           "libraryName": "antd",
