--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/redux-immutable": "^4.0.0",
     "@types/redux-saga": "^0.10.5",
     "@types/rx": "^4.1.1",
-    "antd": "^3.10.8",
+    "antd": "^3.11.2",
     "autoprefixer": "7.1.6",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
@@ -37,9 +37,11 @@
     "compression-webpack-plugin": "1.1.12",
     "connected-react-router": "^5.0.1",
     "copy-webpack-plugin": "^4.6.0",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "events": "^3.0.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.11.2",
     "fork-ts-checker-webpack-plugin": "^0.2.8",
